
syntax ="proto3";

package notes;

option  java_multiple_files=true;
option java_package="com.notes.grpc";
option  java_outer_classname="notes";

service notesService{
  rpc uploadFile(requestFileUpload) returns (responseFileUpload);

  //rpc GetFile (FileDownloadRequest) returns (FileDownloadResponse);
}

message requestFileUpload{
  string userId = 1;
  string folderId = 2;
  string fileName = 3;
  string fileType = 4;
  bytes content = 5;
}
//
message responseFileUpload{
  string status = 1;
  string message = 2;
}
//message FileDownloadRequest {
//  string fileId = 1;
//}

//message FileDownloadResponse {
//  string fileName = 1;
//  string fileType = 2;
//  int64 size = 3;
//  bytes content = 4;
//}